--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       }
 
       try {
-        const webhook = "https://SEU_WEBHOOK_AQUI"; // substitua pelo seu webhook
+        const webhook = "https://integrations-crm.absolutatecnologia.com.br/webhook/4befb399-7d73-441b-aab0-cf27547c8ad8"; // substitua pelo seu webhook
 
         const response = await fetch(webhook, {
           method: "POST",
